--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
                 <div>
                   <div class="font-semibold">development server</div>
                   <div class="text-sm text-muted-foreground">npm run dev</div>
+                  <div class="text">if issue - npm cache clean --force</div>
                 </div>
               </div>
               <div class="text-xs text-muted-foreground mt-2">
